--- a/ACTSOA_GROUP10/appsettings.json
+++ b/ACTSOA_GROUP10/appsettings.json
@@ -7,3 +7,8 @@
   },
   "AllowedHosts": "*"
 }
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
+  }
+}
