--- a/ACTSOA_GROUP10/appsettings.json
+++ b/ACTSOA_GROUP10/appsettings.json
@@ -5,10 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
-{
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=your_database;User Id=your_user;Password=your_password;"
+    "DefaultConnection": "Data Source=DESKTOP-OHV1CLJ\\MSSQLSERVER01;Initial Catalog=MovieSeriesReviews;Integrated Security=True;TrustServerCertificate=True"
   }
 }
