Update API CRUD

--- a/ACTSOA_GROUP10/appsettings.json
+++ b/ACTSOA_GROUP10/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-OHV1CLJ\\MSSQLSERVER01;Initial Catalog=MovieSeriesReviews;Integrated Security=True;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-ILHIH95;Initial Catalog=MovieSeriesReviews;Integrated Security=True;Trust Server Certificate=True"
+    }
 }
